# PJA

GUI/hotel/: instrukcja.html
GUI/hotel/main/: BookingTest.java  Cennik.java  Klient.java  KolekcjaPokoi.java  Koszyk.java  ListaZyczen.java  Platnosc.java
GUI/paint/: instrukcja.html
GUI/paint/main/: Brush.java  Dialog.java  DrawingPane.java  FileManager.java  Main.java
NAI/clustering/: Cluster.java  Datapoint.java  Main.java  Vector.java  instrukcja.txt
NAI/knn/: instrukcja.txt  knn.asm  stringEnumerator.asm
NAI/perceptron/: Main.java  Perceptron.java  Vector.java  instrukcja.txt
NAI/siec_jednowarstwowa/: charmap.txt  instrukcja.txt
NAI/siec_jednowarstwowa/src/: Dataset.java  Enumerator.java  GUI.java  Main.java  Neuron.java  Vector.asm  Vector.java  buildNative.bat  compatLayer.c  types.asm
PJC/steganografia/: CMakeLists.txt  crypt.cpp  fileCheck.cpp  instrukcja.html  main.cpp
PJC/steganografia/include/: crypt.h  fileCheck.h  help.h
PPJ/naturalOrdering/: ArrayList.asm  instrukcja.html
PPJ/zadanie_killer/: Main.java
PPJ/zadanie_killer/consumer/: ArrayBuilder.java  Consumer.java  Finder.java  IndexFinder.java  MaxFinder.java  MinFinder.java
PPJ/zadanie_killer/list/: RemovalFromEmptyListException.java  SortedDoublyLinkedList.java  Student.java
naturalOrdering/: ArrayList.h  naturalOrdering.c
zadanie_killer/: Main.java
zadanie_killer/consumer/: ArrayBuilder.java  Consumer.java  Finder.java  IndexFinder.java  MaxFinder.java  MinFinder.java
zadanie_killer/list/: RemovalFromEmptyListException.java  SortedDoublyLinkedList.java  Student.java
(+78 files in other folders)
